--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "sequelize": "^5.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
