--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "sequelize": "^5.10.0"
+    "read-write-json": "^1.0.5",
+    "sequelize": "^5.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-client": "react-scripts start",
+    "start-server": "node ./server/app.js",
+    "start-dev-server": "nodemon ./server/app.js",
+    "start-dev-server-debug": "nodemon --inspect ./server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "npm run start-dev-server && npm run start-client"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
