--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-notifications": "^1.4.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "read-write-json": "^1.0.5",
